Fixed the borders not being visible on client

--- a/src/styles/underground.less
+++ b/src/styles/underground.less
@@ -1,25 +1,30 @@
 .underground-tool-color {
     --tool-color: white;
-    --tool-color-darker: hsl(from var(--tool-color) h s calc(l - 40));
+    --tool-color-darker: black;
 
     &.underground-tool-color__chisel {
         --tool-color: #5468EC;
+        --tool-color-darker: #0c1868;
     }
 
     &.underground-tool-color__hammer {
         --tool-color: #F86058;
+        --tool-color-darker: #7f0b05;
     }
 
     &.underground-tool-color__bomb {
         --tool-color: #85DD9D;
+        --tool-color-darker: #217538;
     }
 
     &.underground-tool-color__survey {
         --tool-color: #FFC300;
+        --tool-color-darker: #332700;
     }
 
     &.underground-tool-color__discharge {
         --tool-color: rgb(177, 215, 237);
+        --tool-color-darker: #277aab;
     }
 }
 
